Fix about section display on iOS

--- a/_sass/search.scss
+++ b/_sass/search.scss
@@ -3,16 +3,12 @@
 /* Hack iOS Safari Unfocus */
 main {
   outline: none;
-}
-
-/* Click Anywhere to Unfocus */
-html, body {
-  height: 100%;
+  min-height: 100vh; // Click Anywhere to Unfocus
 }
 
 .posts-labelgroup {
   /* Firefox Flex Hack */
-  @-moz-document url-prefix() { 
+  @-moz-document url-prefix() {
     align-items: center;
   }
 
@@ -56,7 +52,7 @@ html, body {
     min-width: 160px;
     width: 100%;
     min-height: 50px;
-    box-shadow: 0 1px 2px 0 rgba(32, 33, 36, 0.28);
+    box-shadow: 0 4px 6px 0 rgba(32, 33, 36, 0.28);
     z-index: 3;
     padding: 10px 0;
     font-size: 15px;
@@ -115,7 +111,7 @@ html, body {
     .search-section {
       border-bottom-left-radius: 0;
       border-bottom-right-radius: 0;
-      box-shadow: 0 1px 2px 0 rgba(32,33,36,0.28);
+      box-shadow: 0 1px 6px 0 rgba(32,33,36,0.28);
       border: 1px solid rgba(223,225,229,0);
       border-bottom: solid 1px #eee;
       z-index: 3;
